welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
var x=true
while(x==true) {
	if (!estFaceMur) {
		avance()
		if (getCouleurSol()==Color.green) {
			recule()
		}
		else x=false
		}
		
	}
}        
